# financial-analyst-agent

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
src/financial_analyst/: .env.example  __init__.py  config.example.py  config.py  graph.py  state.py
src/financial_analyst/nodes/: __init__.py  analyst.py  critique.py  extractor.py  ingestion.py  reporter.py  router.py
src/financial_analyst/prompts/: analyst.py
src/financial_analyst_agent.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_graph.py  test_nodes.py
