[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-analyst-agent"
version = "0.1.0"
requires-python = ">=3.10.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langgraph-checkpoint-sqlite>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "tavily-python>=0.3.0",
    "streamlit>=1.37.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]